src/components/Page/addResponse/AddResponseHeader.module.sass
.headerDiv
    background-color: #1C98EC
    color: white
    height: 50%
    width: 100%
    display: flex
    justify-content: center
    align-items: center
    font-size: 1.25rem
    font-weight: bold

.container
    display: flex
    flex-direction: column
    align-items: center
    height: 32%
    min-height: 200px
    position: sticky
    top: 0px
    width: 100%
    background-color: #262b39
    font-size: 1rem !important

.labelStyle
    font-size: 0.9rem
    align-self: center
    color: #a5a5a5


.responseContainer
    overflow-y: visible
    color: black

.form
    margin: 10px
    min-height: 40%
    display: flex
    flex-direction: row
    justify-content: center
    width: 100%
    

.form:last-of-type
    flex-wrap: wrap
    
.form input
    border-radius: 8px
    padding-left: 10px
    padding-right: 10px
    flex: 1 0 40%
    margin-right: 20px
    margin-left: 20px

.menu
    border-radius: 8px
    padding-left: 5px
    padding-right: 5px
    flex: 1 0 40%
    margin-right: 20px
    margin-left: 10px
    border: none !important
    width: 470px
    display: inline-block
    max-height: 50px

.form i
    position: absolute
    padding-left: 20px
    text-align: center
    height: 100%
    justify-content: center

.form .secondRowDiv
    align-items: baseline
    display: flex
    width: 100%
    font-size: 1rem

.form Button
    height: 2rem
    margin: 5px
    margin-left: 20px
    float: left

.form .tagDiv
    float: right
    margin-top: 5px
    margin-left: 40%
    font-size: 0.9rem

.responseInput
    width: 25% !important
    flex: 1 0 45%

//resizing when the screen makes it to 1000px
@media screen and ( max-width:  1000px)
    .form
        display: flex
        flex-direction: column
        margin-top: 20px
        flex-wrap: wrap

    .form input
        border-radius: 8px
        width: 10%
        padding-left: 10px
        flex: 1
        margin-right: 10px
        margin-left: 20px

    .form i
        flex: 1

    .form .tagDiv
        margin-left: 10%
        
    .container
        min-height: 300px
        min-height: 30%
        height: auto

    .headerDiv
        width: 100%
        padding: 20px

    .form input
        width: 80%
        margin-left: auto
        margin-right: auto
        min-height: 30px
        height: auto
        text-wrap: wrap
        margin-bottom: 10px
    .form Button
        margin-top: 20px
        
    .menu
        width: 80%
        margin-left: auto
        margin-right: auto
        padding: 0
        label: 0.9rem
        max-height: 35px

    .form .secondRowDiv
        width: 80%
        margin-left: auto
        margin-right: auto
        justify-content: center
    
    .responseInput
        width: 80% !important
    

